# godot-4-opencode-dev-test

./: .gitignore  AGENTS.md  README.md  opencode.jsonc  opencode.jsonx  pyproject.toml
.opencode/agents/: build.md  devstral-small-2.md  gemma4.md  gpt-oss.md  granite4.1.md  laguna-xs.md  nemotron-cascade.md  nemotron3.md  ornith.md  qwen3-coder.md  qwen3.5.md  qwen3.6.md
.opencode/commands/: dispatch-task.md
.opencode/templates/: opencode.jsonc.template
docs/: AGENTS.md  adding-new-agents.md  agent-system-architecture.md  dispatch-strategy.md
docs/cards/: card-001-godot-ai-mcp-plugin.md  card-002-spec-driven-interview-process.md  card-003-agents-md-architecture.md  card-004-opencode-native-agent-setup.md  card-005-smoke-test-project.md  card-006-godot-plugin-enablement-notes.md  card-006-project-setup-reference.md  catalogue.md
docs/templates/: CARD.md  CHANGELOG-template.md  catalogue-template.md
my-game/: project.godot
ollama/cards/: 01-iq4-nlx-tool-diagnosis.md  02-official-requant-path.md  03-capability-detection-ref.md  04-split-blob-vision-bug.md  05-30b-models-3090.md  06-sampling-params.md  07-gguf-metadata-diff.md  devstral-family-card.md  gemma4-31b-card.md  gpt-oss-card.md  granite4.1-card.md  laguna-xs.2-card.md  llama3.2-3b-card.md  mistral-small3.2-card.md  nemotron-family-card.md  qwen3-family-card.md  rebuild-all.sh  sample-opencode.jsonc
ollama/model-files/: devstral-small2-384k.modelfile  gemma4-31b-256k.modelfile  gpt-oss20b-128k.modelfile  granite4.1-30b-128k.modelfile  laguna-xs.2-256k.modelfile  llama3.2-3b-128k.modelfile  mistral-small3.2-32k.modelfile  nemotron-cascade30b-256k.modelfile  nemotron3-33b-256k.modelfile  (+7 more)
orchestration/: README.md  __init__.py  dispatch-rules.yaml  ollama-client.py  ollama_client.py  orchestrator.py
(+14 files in other folders)
