[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "godot-4-opencode-dev-test"
version = "0.1.0"
description = "Multi-agent orchestration system for Godot 4 game development"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Michael Conrad", email = "michael@example.com"}
]
keywords = ["godot", "game-dev", "ai", "llm", "orchestration", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.287",
    "mypy>=1.4.1",
]

[project.urls]
Homepage = "https://github.com/michael-conrad/godot-4-opencode-dev-test"
Repository = "https://github.com/michael-conrad/godot-4-opencode-dev-test.git"
Issues = "https://github.com/michael-conrad/godot-4-opencode-dev-test/issues"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.287",
    "mypy>=1.4.1",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W"]
ignore = ["E501"]  # line too long (handled by black)

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
